--- a/views/visit.erb
+++ b/views/visit.erb
@@ -18,6 +18,16 @@
     <input name="datetime" type="text" class="form-control" placeholder="Введите дату и время">
   </div>
 
+ <div class="form-group">
+    <label>Выберите парикмахера?</label>
+    <select class="form-control" id="exampleFormControlSelect1">
+        <option>Петя</option>
+        <option>Люда</option>
+        <option>Вася</option>
+      </select>
+  </div>
+
+
   <button type="submit" class="btn btn-primary">Записаться</button>
 
 </form>
