--- a/views/visit.erb
+++ b/views/visit.erb
@@ -19,8 +19,8 @@
   </div>
 
  <div class="form-group">
-    <label>Выберите парикмахера?</label>
-    <select class="form-control" id="exampleFormControlSelect1">
+    <label>Выберите барбера</label>
+    <select name="barber" class="form-control" id="exampleFormControlSelect1">
         <option>Петя</option>
         <option>Люда</option>
         <option>Вася</option>
