--- a/views/layout.erb
+++ b/views/layout.erb
@@ -12,6 +12,14 @@
 		  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 		  <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
 		<![endif]-->
+			 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	    <script src="/vendor/jquery-1.9.1.min.js"></script>
+	    <!-- Include all compiled plugins (below), or include individual files as needed -->
+	    <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
+
+	    <script src="jquery.simplecolorpicker.js"></script>
+		<link rel="stylesheet" href="jquery.simplecolorpicker.css"/>
+
 	</head>
 	<body>
 		<div class="container">
@@ -38,17 +46,11 @@
 
 			<div>
 			      <%if @error then %>
-			          <div class="alert alert-error"><%=@error%></div>
+			          <div class="alert alert-danger"><%=@error%></div>
 			      <% end %>
 			      <%= yield %>
 			</div>
 
 	</div>
-
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="/vendor/jquery-1.9.1.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
   </body>
 </html>
