--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,8 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- Bootstrap -->
 		<link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-		
-		
+
+
 		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 		<!--[if lt IE 9]>
@@ -20,6 +20,9 @@
 
 	    <script src="jquery.simplecolorpicker.js"></script>
 		<link rel="stylesheet" href="jquery.simplecolorpicker.css"/>
+
+		 <script src="jquery.datetimepicker.full.js"></script>
+		 <link rel="stylesheet" href="jquery.datetimepicker.css"/>
 
 	</head>
 	<body>
