--- a/views/visit.erb
+++ b/views/visit.erb
@@ -3,7 +3,8 @@
 
 <script type="text/javascript">
   $(function(){
-    $('#color').simplecolorpicker()
+    $('#color').simplecolorpicker();
+    $('#datetimepicker').datetimepicker();
   });
  </script> 
 
@@ -21,7 +22,7 @@
 
   <div class="form-group">
     <label>Когда вас ждать?</label>
-    <input name="datetime" type="text" class="form-control" placeholder="Введите дату и время" value="<%= @datetime %>">
+    <input id="datetimepicker" name="datetime" type="text" class="form-control" placeholder="Введите дату и время" value="<%= @datetime %>">
   </div>
 
  <div class="form-group">
