--- a/views/visit.erb
+++ b/views/visit.erb
@@ -28,10 +28,15 @@
  <div class="form-group">
     <label>Выберите барбера</label>
     <select name="barber" class="form-control" id="exampleFormControlSelect1">
-        <option <%= @barber == 'Петя' ? 'selected' : '' %>>Петя</option>
+        <!-- <option <%= @barber == 'Петя' ? 'selected' : '' %>>Петя</option>
         <option <%= @barber == 'Люда' ? 'selected' : '' %>>Люда</option>
-        <option <%= @barber == 'Вася' ? 'selected' : '' %>>Вася</option>
-      </select>
+        <option <%= @barber == 'Вася' ? 'selected' : '' %>>Вася</option> 
+ --> 
+      <% @barbers.each do |item| %>
+        <option <%= @barber == item['name'] ? 'selected' : '' %>><%= item['name'] %></option>    
+      <% end %>
+
+    </select>
   </div>
 
 <div class="form-group">
