--- a/views/layout.erb
+++ b/views/layout.erb
@@ -45,6 +45,7 @@
 			      <li><a href="/visit">Записаться</a></li>
 			      <li><a href="/showusers">Список записавшихся</a></li>
 			      <li><a href="/contacts">Контакты</a></li>
+			      <li><a href="/new">Новый пост</a></li>
 			    </ul>
 			  </div><!--/.nav-collapse -->
 			</nav>
